static/css/style.css
body {
  padding: 10px 0px;
  font:1em/1.4 Cambria, Georgia, sans-serif;
}

#connection { background: url(/static/img/bullet-black-icon.png) no-repeat; padding-left: 36px; min-height: 32px; }
#connection.connected { background-image: url(/static/img/bullet-blue-icon.png); }
#connection.logged-in { background-image: url(/static/img/bullet-green-icon.png); }
#connection.error     { background-image: url(/static/img/bullet-red-icon.png); }

/* http://html-generator.weebly.com/css-speech-bubble-generator.html */
.bubble {
    position: relative;
    width: 300px;
    min-height: 25px;
    padding: 10px;
    margin-bottom: 20px;
    background: -webkit-linear-gradient(90deg, #B0B0B0 5%, #EDEDED 100%);
    background: -moz-linear-gradient(90deg, #B0B0B0 5%, #EDEDED 100%);
    background: -ms-linear-gradient(90deg, #B0B0B0 5%, #EDEDED 100%);
    background: linear-gradient(180deg, #EDEDED 5%, #B0B0B0 100%);
    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#EDEDED', endColorstr='#B0B0B0');
    -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
    border-radius: 5px;
    -webkit-box-shadow: 2px 2px 10px 0px #616161;
    -moz-box-shadow: 2px 2px 10px 0px #616161;
    box-shadow: 2px 2px 10px 0px #616161;
}

.bubble:after {
    content: "";
    position: absolute;
    top: 8px;
    left: -15px;
    border-style: solid;
    border-width: 10px 15px 10px 0;
    border-color: transparent #C4C4C4;
    display: block;
    width: 0;
    z-index: 1;
}

.bubble.odd { margin-left: 40px; }

.bubble.own:after {
    left: auto;
    right: -15px;
    border-width: 10px 0 10px 15px;
}

.bubble p { font-size: 70%; padding: 0; margin: 0; }
.bubble .number { font-weight: bold; }
.bubble img { float: left; margin: 0px 15px; }
.bubble a { text-decoration: none; }

.list-group {
  box-shadow: none;
}
.btn .emoji { width: 16px; height: 16px; }

